syntax = "proto3";

package test.bazel.proto;

enum PizzaSize {
  PIZZA_SIZE_UNKNOWN = 0;
  PIZZA_SIZE_SMALL = 1;
  PIZZA_SIZE_MEDIUM = 2;
  PIZZA_SIZE_LARGE = 3;
}

message Pizza {
  // The size of the pizza.
  PizzaSize size = 1;

  // The list of toppings that are on the pizza.
  repeated string topping_ids = 2;
}
